--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "Accueil",
         "adressecli",
         "adresseclient",
+        "afficher",
+        "associatifs",
         "avec",
         "connexion",
         "Contraintes",
@@ -28,6 +30,8 @@
         "effectuée",
         "effectuées",
         "enregistrement",
+        "erreurs",
+        "ERRMODE",
         "etudiant",
         "evene",
         "evenement",
@@ -62,9 +66,12 @@
         "quantitevendue",
         "recette",
         "recettes",
+        "récupérer",
         "remplir",
         "reponse",
+        "requêtes",
         "réservés",
+        "résultat",
         "serveur",
         "succès",
         "suivi",
