--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "80:80"
     volumes:
       - .:/var/www/html
     depends_on:
@@ -15,6 +13,29 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    networks:
+      - homelaurechips_network
+      - proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.homelaurechips.rule=Host(`hlc.digitaleflex.com`)"
+      - "traefik.http.routers.homelaurechips.entrypoints=websecure"
+      - "traefik.http.routers.homelaurechips.tls.certresolver=letsencrypt"
+      - "traefik.http.services.homelaurechips.loadbalancer.server.port=80" # port utilisé par votre application
+      # Labels supplémentaires pour la sécurité et la stabilité
+      - "traefik.http.routers.homelaurechips.service=homelaurechips"
+      - "traefik.http.services.homelaurechips.loadbalancer.passhostheader=true"
+      - "traefik.http.routers.homelaurechips.tls.options=default"
+      - "traefik.http.middlewares.secHeaders.headers.sslRedirect=true"
+      - "traefik.http.middlewares.secHeaders.headers.forceSTSHeader=true"
+      - "traefik.http.middlewares.secHeaders.headers.stsIncludeSubdomains=true"
+      - "traefik.http.middlewares.secHeaders.headers.stsPreload=true"
+      - "traefik.http.middlewares.secHeaders.headers.stsSeconds=31536000"
+      - "traefik.http.middlewares.secHeaders.headers.contentTypeNosniff=true"
+      - "traefik.http.middlewares.secHeaders.headers.browserXssFilter=true"
+      - "traefik.http.middlewares.secHeaders.headers.referrerPolicy=strict-origin-when-cross-origin"
+      - "traefik.http.middlewares.secHeaders.headers.permissionsPolicy=camera=(), microphone=(), geolocation=()"
+      - "traefik.http.routers.homelaurechips.middlewares=secHeaders"
 
   db_homelaurechips:
     image: mysql:5.7
@@ -25,6 +46,14 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - db_data:/var/lib/mysql
+    networks:
+      - homelaurechips_network # Spécifiez le réseau pour la base de données
 
 volumes:
-   db_data:
+  db_data:
+
+networks:
+  homelaurechips_network:
+    driver: bridge # Utilisez le driver bridge pour le réseau interne
+  proxy:
+    external: true
