mise a jour du fichier .env

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-MYSQL_ROOT_PASSWORD=root12Laurelle
+# MYSQL_ROOT_PASSWORD=root12Laurelle
+# MYSQL_DATABASE=db_homechips_laure
+# MYSQL_USER=homechipslaure
+# MYSQL_PASSWORD=root12Laurelle
+
+MYSQL_ROOT_PASSWORD=
 MYSQL_DATABASE=db_homechips_laure
-MYSQL_USER=homechipslaure
-MYSQL_PASSWORD=root12Laurelle
+MYSQL_USER=root
+MYSQL_PASSWORD=
